--- a/pyspark_wrangling.ipynb
+++ b/pyspark_wrangling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6M3zpbyzR67NeTkxKxc6r"
+      "authorship_tag": "ABX9TyPl11Arqj16Qm58Nk03cVQ0"
     },
     "kernelspec": {
       "name": "python3",
@@ -23,7 +23,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7d9e5945-5873-49a0-86a5-72473e000de2"
+        "outputId": "ce2c5cc8-ab59-4c63-abde-af814367d2ff"
       },
       "outputs": [
         {
@@ -63,7 +63,7 @@
           "height": 219
         },
         "id": "HGyw5KKSAiEM",
-        "outputId": "19d08951-3d8d-4b4b-b707-c4c582eda491"
+        "outputId": "1de9f4f5-b718-405a-fd2c-10246704ede3"
       },
       "execution_count": 3,
       "outputs": [
@@ -71,7 +71,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<pyspark.sql.session.SparkSession at 0x7f3ce5592460>"
+              "<pyspark.sql.session.SparkSession at 0x7f5009dd5430>"
             ],
             "text/html": [
               "\n",
@@ -81,7 +81,7 @@
               "        <div>\n",
               "            <p><b>SparkContext</b></p>\n",
               "\n",
-              "            <p><a href=\"http://693ff117692f:4040\">Spark UI</a></p>\n",
+              "            <p><a href=\"http://7bfe861b28c2:4040\">Spark UI</a></p>\n",
               "\n",
               "            <dl>\n",
               "              <dt>Version</dt>\n",
@@ -126,7 +126,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ujy1YonGCEOJ",
-        "outputId": "7e6cd7df-7cf5-44f6-dede-b57649dc89d9"
+        "outputId": "504ebc11-3173-440d-d4e8-ddf2a703e14f"
       },
       "execution_count": 5,
       "outputs": [
@@ -146,6 +146,122 @@
             "only showing top 5 rows\n",
             "\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.rdd.getNumPartitions()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "apph0vtZE3ki",
+        "outputId": "52da0829-fac1-496b-d718-179cc952c0cd"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NgaiXsa4ITpk",
+        "outputId": "59ba7cf9-2134-44b9-b74e-5a9c344ddf44"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- sale_id: string (nullable = true)\n",
+            " |-- sale_date: timestamp (nullable = true)\n",
+            " |-- customer_firstname: string (nullable = true)\n",
+            " |-- customer_lastname: string (nullable = true)\n",
+            " |-- customer_email: string (nullable = true)\n",
+            " |-- country: string (nullable = true)\n",
+            " |-- city: string (nullable = true)\n",
+            " |-- final_price: double (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.select(\"final_price\").summary(\"count\", \"min\", \"25%\", \"75%\", \"max\").show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QcMTbDUCIptU",
+        "outputId": "e1f05435-b78b-4606-eaae-8cdf5b73b946"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+-----------+\n",
+            "|summary|final_price|\n",
+            "+-------+-----------+\n",
+            "|  count|      10000|\n",
+            "|    min|        1.0|\n",
+            "|    25%|      25.55|\n",
+            "|    75%|      75.33|\n",
+            "|    max|      99.98|\n",
+            "+-------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.distinct().count()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l62Y82-wJMUf",
+        "outputId": "ea71a8a2-5434-46e9-9b83-3363f9da598e"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10000"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
         }
       ]
     }
